choroplethr 1.7.99
----------------------------------------------------------------

FEATURE
  -Add a function percent_change which, given two choroplethr objects, returns the percent change between them
  -Remove dependency on maps package

BUG FIX
  -with character input for values inset maps were not having consistent scales with main map. Fix this by converting character input to factors early on.

choroplethr 1.7.0
----------------------------------------------------------------

FEATURE
  -Add a world map: see ?map.world for more info
  -Add a vector of all countries in the world map: see ?country.names for more info
  -Add support for the world map to the choroplethr() function: see ?choroplethr for more info.

choroplethr 1.6.0
----------------------------------------------------------------

FEATURE
  -Add a flag to the choroplethr() function, renderAsInsets.  If TRUE and user asked to view all 
states, then AK and HI will be rendered as insets, which is the standard way of rendering a map of
all 50 US states. 
  -Create a data.frame, map.states, which contains a map for all 50 states plus the District of Columbia.  See ?map.states for details.
  -Create a data.frame, state.names, which contains naming information for each state in map.states. See ?state.names for more information.
  -Create a data.frame, map.counties, which contains a map for the counties of all 50 states plus the District of Columbia.  See ?map.counties for details.
  -Create a data.frame, county.names, which contains naming information for each county in map.counties. See ?county.names for more information.

BUG FIXES

choroplethr 1.5.0
----------------------------------------------------------------

FEATURE
  -Make NA values appear black on the map.  The default value for NA values in ggplot2, grey50, was difficult to distinguish from the light values in the brewer scale.
  -Create function clip_df(data.frame, lod) that clips a data.frame to a map.  This is useful