@@ -4,6 +4,7 @@ export(bind_df_to_map)
 export(choroplethr)
 export(choroplethr_acs)
 export(choroplethr_animate)
+export(choroplethr_wdi)
 export(clip_df)
 export(format_levels)
 export(get_acs_column_names)
@@ -12,6 +13,7 @@ export(percent_change)
 export(render_choropleth)
 export(theme_clean)
 importFrom(Hmisc,cut2)
+importFrom(WDI,WDI)
 importFrom(acs,acs.fetch)
 importFrom(acs,estimate)
 importFrom(acs,geo.make)
